# ch32_i2cdevice

./: Cargo.toml  flake.nix
src/: i2c_device.rs
